# LowLevelLibrary

./: README.md
sources/: bitmanip.h
tests/: CMakeLists.txt
tests/bitmanip/: test_bitmanip.cpp
